# fair-ml-cyber

./: .gitignore  .zenodo.json  ADVANCED_CORE_MULTI_SEED_STATUS.md  ADVANCED_CORE_S42_RESULTS.md  AZURE_RESOURCES.md  CITATION.cff  CSE_CIC_IDS2018_FULL_SAMPLE_RESULTS.md  CSE_CIC_IDS2018_PARTIAL_RESULTS.md  ETAT_ART_BIBLIOGRAPHIE.md  FULLCORE_MEM_MULTI_SEED_RESULTS.md  FULLCORE_MEM_S42_RESULTS.md  LR2000_CONVERGENCE_RESULTS.md  Makefile  OPEN_SET_IF_RESULTS.md  PILOT10K_RESULTS.md  Q1_REVIEW_CRITIQUE.md  README.md  RESEARCH_QUESTIONS_AND_PROTOCOL.md  RESTART_CHECKPOINT.md  REVIEWER_REMARKS_VALIDATION.md  ROADMAP_FAIR_ML_CYBER.md  SECOND_DATASET_SELECTION.md  SUIVI_AUDIT_Q1.md  TESTING_AND_EXPERIMENT_LOG.md  UNSW_NB15_ACCESS_ATTEMPT.md  article_proposal_q1.md  bibliography.md  dataset_audit.md  experimental_protocol.md  pyproject.toml  q1_viability_check.md  references.bib  requirements.txt  single_dataset_q1_strategy.md  state_of_the_art.md
azureml/: advanced_core_seed42_job.yml  advanced_core_seed7_job.yml  advanced_core_seed99_job.yml  calibration_seed42_job.yml  calibration_seed7_job.yml  calibration_seed99_job.yml  conda.yml  data_csvs.yml  environment.yml  environment_runtime.yml  full_core_job.yml  full_core_lr2000_nohour_seed42_job.yml  full_core_lr2000_nohour_seed7_job.yml  full_core_lr2000_nohour_seed99_job.yml  full_core_lr2000_seed42_job.yml  full_core_memory_job.yml  full_core_memory_seed7_job.yml  full_core_memory_seed99_job.yml  open_set_if_seed42_job.yml  open_set_if_seed7_job.yml  open_set_if_seed99_job.yml  pilot_job.yml  smoke_job.yml
paper/: README.md  (+2 more)
(+150 files in other folders)
