[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-ml-cyber"
version = "0.1.0"
description = "Reproducible transferability evaluation framework for flow-based network intrusion detection"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "pyarrow>=12.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "mlflow>=2.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]
boosting = ["xgboost>=2.0", "lightgbm>=4.0"]

[project.scripts]
fair-ml-cyber = "fair_ml_cyber.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

